--- a/src/index.html
+++ b/src/index.html
@@ -5,20 +5,60 @@
     <meta charset="utf-8" />
     <title>Moment 3</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Acme|Fontdiner+Swanky|Lalezar&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
-<header id ="mainheader">
-    <ul>
-        <li><a href ="#">Hem</a></li>
-        <li><a href ="#">Nyheter</a></li>
-        <li><a href ="#">Kontakt</a></li>
-        <li><a href ="#">Om sidan</a></li>
-        <li><a href ="#">Hjälp</a></li>
-    </ul>
+<header id="mainheader">
+    <div id="logo-container">
+        <a href="#">
+            <h2>Mogges</h2>
+        </a>
+    </div>
+    <div id ="mobile-container">
+            <div id="mobile-menu">
+                    <span>&nbsp;</span>
+                    <span>&nbsp;</span>
+                    <span>&nbsp;</span>
+               </div>
+     </div>
+    <div id="main-nav">
+        <ul>
+            <li><a class="active" href="#">Hem</a></li>
+            <li><a href="#">Nyheter</a></li>
+            <li><a href="#">Kontakt</a></li>
+            <li><a href="#">Om sidan</a></li>
+            <li><a href="#">Hjälp</a></li>
+        </ul>
+    </div>
 </header>
+
+<div id="second-header">
+</div>
+
 <body>
-    <h1>Moment3</h1>
+
+    <div id="banner">
+        <h1>Mogges Vinyl i Hässelby</h1>
+<img src ="images/banner.jpg" alt ="Bild på vinylskivor">
+    </div>
+    <div id="container">
+        <div id="main">
+            <h1>Moment3</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+    </div>
+    <footer>
+        <div class="footer-content">
+            <p>Moment 3 - Webbutveckling III</p>
+        </div>
+
+    </footer>
+    <script
+    src="https://code.jquery.com/jquery-3.4.1.slim.js"
+    integrity="sha256-BTlTdQO9/fascB1drekrDVkaKd9PkwBymMlHOiG+qLI="
+    crossorigin="anonymous"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
 
 </html>
