uppdaterat scss en aning

--- a/pub/index.html
+++ b/pub/index.html
@@ -15,20 +15,20 @@
             <h2>Mogges</h2>
         </a>
     </div>
-    <div id ="mobile-container">
-            <div id="mobile-menu">
-                    <span>&nbsp;</span>
-                    <span>&nbsp;</span>
-                    <span>&nbsp;</span>
-               </div>
-     </div>
+    <div id="mobile-container">
+        <div id="mobile-menu">
+            <span>&nbsp;</span>
+            <span>&nbsp;</span>
+            <span>&nbsp;</span>
+        </div>
+    </div>
     <div id="main-nav">
         <ul>
             <li><a class="active" href="#">Hem</a></li>
-            <li><a href="#">Nyheter</a></li>
-            <li><a href="#">Kontakt</a></li>
-            <li><a href="#">Om sidan</a></li>
-            <li><a href="#">Hjälp</a></li>
+            <li><a href="index.html">Produkter</a></li>
+            <li><a href="index.html">Tjänster</a></li>
+            <li><a href="index.html">Om sidan</a></li>
+            <li><a href="index.html">Kontakt</a></li>
         </ul>
     </div>
 </header>
@@ -39,25 +39,57 @@
 <body>
 
     <div id="banner">
-        <h1>Mogges Vinyl i Hässelby</h1>
-<img src ="images/banner.jpg" alt ="Bild på vinylskivor">
+        <h1>Mogges Vinyl & Musik</h1>
+        <img src="images/banner.jpg" alt="Bild på vinylskivor">
     </div>
     <div id="container">
         <div id="main">
-            <h1>Moment3</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <section id="main-text">
+                <h2>Moment3</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip
+                    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                    dolore eu
+                    fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                    deserunt mollit anim id est laborum.</p>
+            </section>
+
+            <section id="services">
+                <div class="service">
+                    <h3>LP-skivor</h3>
+                </div>
+                <div class="service">
+                    <h3>CD-skivor</h3>
+                </div>
+                <div class="service">
+                    <h3>Instrument</h3>
+                </div>
+                <div class="service">
+                    <h3>Reparationer</h3>
+                </div>
+            </section>
+
+            <section id="commercials">
+                <div class="commercial">
+                    <h3>Reklam 1</h3>
+                </div>
+                <div class="commercial">
+                    <h3>Reklam 2</h3>
+                </div>
+            </section>
         </div>
     </div>
+
     <footer>
         <div class="footer-content">
             <p>Moment 3 - Webbutveckling III</p>
         </div>
-
     </footer>
-    <script
-    src="https://code.jquery.com/jquery-3.4.1.slim.js"
-    integrity="sha256-BTlTdQO9/fascB1drekrDVkaKd9PkwBymMlHOiG+qLI="
-    crossorigin="anonymous"></script>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.js"
+        integrity="sha256-BTlTdQO9/fascB1drekrDVkaKd9PkwBymMlHOiG+qLI=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/main.js"></script>
 </body>
 
