sourcemaps tillagt bl.a.

--- a/pub/index.html
+++ b/pub/index.html
@@ -6,7 +6,7 @@
     <title>Moment 3</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Acme|Fontdiner+Swanky|Lalezar&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
 <header id="mainheader">
@@ -59,6 +59,7 @@
             <section id="services">
                 <div class="service">
                     <h3>LP-skivor</h3>
+                    <i class="fas fa-record-vinyl"></i>
                 </div>
                 <div class="service">
                     <h3>CD-skivor</h3>
@@ -73,10 +74,10 @@
 
             <section id="commercials">
                 <div class="commercial">
-                    <h3>Reklam 1</h3>
+                    <img src ="images/commercial1.jpg">
                 </div>
                 <div class="commercial">
-                    <h3>Reklam 2</h3>
+                    <img src ="images/commercial2.jpg">
                 </div>
             </section>
         </div>
