--- a/src/index.html
+++ b/src/index.html
@@ -5,38 +5,40 @@
     <meta charset="utf-8" />
     <title>Moment 3</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Acme|Fontdiner+Swanky|Lalezar&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Acme%7CFontdiner+Swanky%7CLalezar&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
-<header id="mainheader">
-    <div id="logo-container">
-        <a href="#">
-            <h2>Mogges</h2>
-        </a>
-    </div>
-    <div id="mobile-container">
-        <div id="mobile-menu">
-            <span>&nbsp;</span>
-            <span>&nbsp;</span>
-            <span>&nbsp;</span>
-        </div>
-    </div>
-    <div id="main-nav">
-        <ul>
-            <li><a class="active" href="#">Hem</a></li>
-            <li><a href="index.html">Produkter</a></li>
-            <li><a href="index.html">Tjänster</a></li>
-            <li><a href="index.html">Om sidan</a></li>
-            <li><a href="index.html">Kontakt</a></li>
-        </ul>
-    </div>
-</header>
-
-<div id="second-header">
-</div>
-
 <body>
+    <header id="mainheader">
+        <div id="logo-container">
+            <a href="#">
+                <h2>Mogges</h2>
+            </a>
+        </div>
+        <div id="mobile-container">
+            <div id="mobile-menu">
+                <span>&nbsp;</span>
+                <span>&nbsp;</span>
+                <span>&nbsp;</span>
+            </div>
+        </div>
+        <div id="main-nav">
+            <ul>
+                <li><a class="active" href="#">Hem</a></li>
+                <li><a href="index.html">Produkter</a></li>
+                <li><a href="index.html">Tjänster</a></li>
+                <li><a href="index.html">Om sidan</a></li>
+                <li><a href="index.html">Kontakt</a></li>
+            </ul>
+        </div>
+    </header>
+
+    <div id="second-header">
+    </div>
+
+
 
     <div id="banner">
         <h1>Mogges Vinyl & Musik</h1>
@@ -56,7 +58,7 @@
                     deserunt mollit anim id est laborum.</p>
             </section>
 
-            <section id="services">
+            <div id="services">
                 <div class="service">
                     <h3>LP-skivor</h3>
                     <i class="fas fa-record-vinyl"></i>
@@ -70,16 +72,18 @@
                 <div class="service">
                     <h3>Reparationer</h3>
                 </div>
-            </section>
+            </div>
 
-            <section id="commercials">
+            <div id="commercials">
                 <div class="commercial">
-                    <img src ="images/commercial1.jpg">
+                    <a href="index.html">Våra butiker >></a>
+                    <img src="images/commercial1.jpg" alt="Bild på vinylskivor i en butik">
                 </div>
                 <div class="commercial">
-                    <img src ="images/commercial2.jpg">
+                    <a href="index.html">Lär dig mer >></a>
+                    <img src="images/commercial2.jpg" alt="Bild på en vinylskiva">
                 </div>
-            </section>
+            </div>
         </div>
     </div>
 
@@ -91,7 +95,7 @@
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.js"
         integrity="sha256-BTlTdQO9/fascB1drekrDVkaKd9PkwBymMlHOiG+qLI=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
